# mnist_project

./: CMakeLists.txt  README.md
app/console_app/: CMakeLists.txt  main.cpp
app/gui_app/: CMakeLists.txt
data/: README.md
lib/matrix/: CMakeLists.txt
lib/matrix/include/matrix/: matrix.hpp
lib/matrix/src/: matrix.cpp
lib/ml/: CMakeLists.txt
lib/ml/include/ml/: mnist_loader.hpp  neural_network.hpp
lib/ml/src/: mnist_loader.cpp  neural_network.cpp
tests/: CMakeLists.txt
